# MINIAPP

./: Makefile_kokkos_cuda_theta_gpu  Makefile_kokkos_omptarget_ats  Makefile_kokkos_sycl_theta_gpu  README.md
src/: CMakeLists.txt  Communication.cpp  Main.cpp
src/geometries/: Geometry.hh
src/kernels/: KernelAA.hh  KernelAA_AOS_Base.cpp  KernelAA_AOS_Base.hh  KernelAA_SOA_Base.cpp  KernelAA_SOA_Base.hh  KernelAA_SOA_Unroll.cpp  KernelAA_SOA_Unroll.hh  KernelAB.hh  KernelAB_AOS_Base.cpp  KernelAB_AOS_Base.hh  KernelAB_SOA_Base.cpp  KernelAB_SOA_Base.hh  KernelAB_SOA_Pull.cpp  KernelAB_SOA_Pull.hh  KernelAB_SOA_Unroll.cpp  KernelAB_SOA_Unroll.hh  KernelAB_SOA_Unroll_Pull.cpp  KernelAB_SOA_Unroll_Pull.hh
src/propagation/: PropagationAA.cpp  PropagationAB.cpp
test/: 16_input_aa_unroll.txt  16_input_ab_pull_unroll.txt  16_input_ab_unroll.txt  32_input_aa_unroll.txt  32_input_ab_pull_unroll.txt  32_input_ab_unroll.txt
